[package]
name = "hacker101_encrypted_pastebin"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = {version= "0.9.0-rc.0" , feature = ["alloc","block-padding"]}
base64 = "0.22.1"
cbc = "0.2.0-rc.0"
ecb = "0.1.2"
rand = "0.9.2"
reqwest = "0.12.22"
tokio = {version= "1.46.1" ,features = ["macros"]}
generic-array = "1.2.0"
cipher = "0.5.0-rc.0"
serde_json = "1.0.142"